kouhai/tests/cases/error/ternary_type_mismatch.kou
fn main():
    let x: Bool = true
    let y = 1 if x else "no"
